# FunctionalProgramming

./: .gitignore  README.md
lab1/DB/: sports.sql
lab1/app/: Main.hs
lab2/: lab2.cabal
lab2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lab2/src/: Gaussian.hs
problems/chat5/: chat5.cabal
problems/chat5/app/: Main.hs
problems/genetic3/: genetic  genetic.hi  genetic.hs
problems/grapgh_path4/: grapgh_path  grapgh_path.hi  grapgh_path.hs
problems/knights_tour1/: knights_tour  knights_tour.hi  knights_tour.hs
problems/parceptron2/: parceptron2.cabal
problems/parceptron2/app/: Main.hs
problems/xml6/: CHANGELOG.md  xml6.cabal
problems/xml6/app/: Main.hs
problems/xml6/dist-newstyle/cache/: compiler  config
